MAJ des assets de des fixtures

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,8 +11,8 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <link rel="stylesheet" href="{{ asset('css/base.css') }}">
         <link rel="stylesheet" href="{{ asset('css/font-awesome/css/font-awesome.min.css') }}">
-        <link rel="shortcut icon" type="image/png" href="{{ asset('favicon.png') }}" />
-        <link rel="shortcut icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <link rel="shortcut icon" type="image/png" href="{{ asset('img/elements/favicon.png') }}" />
+        <link rel="shortcut icon" type="image/x-icon" href="{{ asset('img/elements/favicon.ico') }}" />
     {% endblock %}
 </head>
 
@@ -85,7 +85,7 @@
                         <path d="M375,57.875 C329.3125,33.25625 262.475,17.73125 188.0125,17.73125 C113.3,17.73125 46.2625,33.3625 0.56875,58.125 C0.375,58.225 0.1875,58.33125 0,58.43125 C0.1125,58.325 0.23125,58.225 0.34375,58.125 C29.525,31.7 79.99375,12.0875 140.03125,5.1875 C143.575,4.78125 147.15625,4.41875 150.76875,4.1 C153.175,3.89375 155.59375,3.7 158.025,3.53125 C160.4625,3.35625 162.90625,3.20625 165.3625,3.08125 C170.28125,2.81875 175.25,2.65 180.25625,2.5625 C182.7625,2.51875 185.28125,2.49375 187.80625,2.49375 C188.225,2.49375 188.64375,2.49375 189.0625,2.5 C268.9375,2.725 338.4625,25 375,57.875" fill="#E7E7E7"></path>
                     </g>
                 </svg>
-                <img class="navbar-logo" src="{{ asset('img/logo.svg') }}" alt="NAO_LOGO">
+                <img class="navbar-logo" src="{{ asset('img/elements/logo.svg') }}" alt="NAO_LOGO">
             </div>   
 
             {# POUR TRANSFORMATION #}
@@ -102,7 +102,7 @@
                             C1684.3,297,1427.7,318,1141.8,318z" fill="#E7E7E7"/>
                     </g>
                 </svg>
-                <img class="navbar-logo" src="{{ asset('img/logo.svg') }}" alt="NAO_LOGO" style="margin-top: -30px">
+                <img class="navbar-logo" src="{{ asset('img/elements/logo.svg') }}" alt="NAO_LOGO" style="margin-top: -30px">
             </div>
         </nav>
 
@@ -150,7 +150,7 @@
 
     <div class="container-fluid d-flex flex-wrap align-items-center justify-content-around" id="footerLinks">
         <div class="col-6 col-sm-3 col-lg-2 my-5 my-md-0 order-sm-2">
-            <img src="{{ asset('img/logo.svg') }}" alt="NAO_LOGO">
+            <img src="{{ asset('img/elements/logo.svg') }}" alt="NAO_LOGO">
         </div>
         <div class="col-12 col-sm-3 text-center mb-5 my-md-0 order-sm-1">
             <h1 class="mb-1" id="footer-title">NAO</h1>
