--- a/app/Resources/views/main/actualites.html.twig
+++ b/app/Resources/views/main/actualites.html.twig
@@ -36,7 +36,7 @@
           {% for actualite in actualites %}
               <div class="card p-0" style="width: 30rem;">
                 <div class="mb-4">
-                  <img class="card-img-top" src="{{ asset('img/'~ actualite.actualiteImage) }}" alt="image_actualite" >
+                  <img class="card-img-top" src="{{ asset('img/actualites/'~ actualite.actualiteImage) }}" alt="image_actualite" >
                 </div>
                 <div class="card-title text-center px-3 mb-0">
                   <p>{{ actualite.updateAt|localizeddate('full', 'none')|upper }}</p>
