--- a/app/Resources/views/main/observation.html.twig
+++ b/app/Resources/views/main/observation.html.twig
@@ -153,7 +153,7 @@
             </div>
 
             {#La GoogleMaps#}
-            <div id="dialog" title="Déplacez-moi !" style="display: none">
+            <div id="dialog" title="Cliquez pour selectionner l'endroit de votre observation!" style="display: none">
                 <div id="map"></div>
             </div>
         </div>
