--- a/app/Resources/views/main/oiseaux.html.twig
+++ b/app/Resources/views/main/oiseaux.html.twig
@@ -101,7 +101,7 @@
                             <div class="p-2 nao-card mx-auto">
                                 <div class="d-flex flex-nowrap align-items-center">
                                     <div class="bird-img-wrapper">
-                                        <img src="{{ bird.image }}"
+                                        <img src="{{asset('img/birds/')~ bird.image }}"
                                             class="bird-img" >
                                     </div>
                                     <div class="col d-flex flex-column justify-content-between">
@@ -137,7 +137,7 @@
                                 </div>
                                 <div class="modal-body py-0 mb-5">
                                     <div class="flex-wrap media align-items-center justify-content-center px-0 px-md-3">
-                                        <img class="col-12 col-md-4 rounded mr-md-4 p-0" src="{{ bird.image }}" alt="image {{ bird.name }}">
+                                        <img class="col-12 col-md-4 rounded mr-md-4 p-0" src="{{asset('img/birds')~ bird.image }}" alt="image {{ bird.name }}">
                                         <div class="media-body col-12 col-md-8 p-0">
                                             <h3 class="mt-5 mt-md-0 text-center text-md-left">DESCRIPTION</h3>
                                             <p class="text-justify">{{ bird.description }}</p>
@@ -152,7 +152,7 @@
                                                 <h3>DERNIERE OBSERVATION</h3>
                                                 <div class="col-12">
                                                     <div class="row align-items-center justify-content-start my-5">
-                                                        <img src="{{asset('img/') ~ observation.user.profilePicture }}" alt="Photo de {{ observation.user.username }}" class="observation-avatar rounded-circle">
+                                                        <img src="{{asset('img/profilePictures/'~ observation.user.profilePicture)  }}" alt="Photo de {{ observation.user.username }}" class="observation-avatar rounded-circle">
                                                         <div class="justify-content-start ml-3">
                                                             <p class="text-left mb-1 user-name">{{ observation.user.username|capitalize }}</p>
                                                             <span class="text-left time">{{ observation.observedAt |ago }}</span>
@@ -163,14 +163,14 @@
                                                     <div class="col-12 col-lg-6">
                                                         <div class="d-flex flex-wrap align-items-center justify-content-between">
                                                             {% if observation.image == null %}
-                                                                <img class="col-12 rounded p-0 mb-5" src="{{ asset('img/anonymeBird.png') }}" alt="image {{ observation.bird.name }}">
+                                                                <img class="col-12 rounded p-0 mb-5" src="{{ asset('img/observations/anonymeBird.png') }}" alt="image {{ observation.bird.name }}">
                                                             {% else %}
-                                                                <img class="col-12 rounded p-0 mb-5" src="{{ asset(observation.image) }}" alt="image {{ observation.bird.name }}"> <span class="fa-stack fa fa-2x mr-3">
+                                                                <img class="col-12 rounded p-0 mb-5" src="{{ asset('img/observations/'~ observation.image)  }}" alt="image {{ observation.bird.name }}">{% endif %}
+                                                                <span class="fa-stack fa fa-2x mr-3">
                                                                 {#VOTE#}
                                                                 <i class="fa fa-heart fa-stack-2x voteJs" id="voteFor{{ observation.id }}" aria-hidden="true" data-observationId="{{ observation.id }}" data-userId="{% if user %}{{ user.id }}{% else %}none{% endif %}" ></i>
                                                                 <strong class="fa fa-stack heart-text voteJs heartJs" data-observationId="{{ observation.id }}" data-userId="{% if user %}{{ user.id }}{% else %}none{% endif %}">{{ observation.usersVoted|length }}</strong>
                                                             </span>
-                                                            {% endif %}
                                                         </div>
                                                     </div>
                                                     <div class="col-12 col-lg-6">
@@ -188,7 +188,7 @@
                                                         <div class="flex-wrap flex-column comm-display p-0 mb-4" id="Js-observationCommentsDisplay{{ observation.id }}">
                                                             {% for comment in observation.comments %}
                                                                 <div class="d-flex flex-nowrap align-items-center comm m-3">
-                                                                    <img src="{{ asset('img/'~comment.user.profilePicture) }}" alt="" class="comment-avatar rounded-circle">
+                                                                    <img src="{{ asset('img/profilePictures/'~comment.user.profilePicture) }}" alt="" class="comment-avatar rounded-circle">
                                                                     <div class="col-12 pl-3 text-left">
                                                                         <div class="col-12 px-0">
                                                                             <p class="mb-1 font-weight-bold">{{ comment.user.username|capitalize }}</p>
