--- a/app/Resources/views/main/actualite.html.twig
+++ b/app/Resources/views/main/actualite.html.twig
@@ -32,7 +32,7 @@
             {#----------------#}
 
             <div class="media align-items-center mb-3">
-                <img src="{{ asset('img/'~ user.profilePicture) }}" alt="Photo {{ user.username|capitalize }}" class="d-flex mr-3 profilePicture">
+                <img src="{{ asset('img/profilePictures/'~ user.profilePicture) }}" alt="Photo {{ user.username|capitalize }}" class="d-flex mr-3 profilePicture">
                 <p class="font-weight-bold mb-0">{{ user.username|capitalize }}</p>
 
             </div>
@@ -42,7 +42,7 @@
             <h3 class="my-4 mt-md-0 text-center text-md-left d-sm-block d-md-none">{{ actualite.title|upper }}</h3>
 
             <div class="flex-wrap media align-items-center justify-content-center">
-                <img class="col-12 col-md-4 rounded mr-md-4 p-0" src="{{ asset('img/'~actualite.actualiteImage) }}" alt="image d'actualité">
+                <img class="col-12 col-md-4 rounded mr-md-4 p-0" src="{{ asset('img/actualites/'~actualite.actualiteImage) }}" alt="image d'actualité">
                 <div class="media-body col-12 col-md-8 p-0">
                     <h3 class="mt-4 mt-md-0 text-center text-md-left d-sm-none d-md-block">{{ actualite.title|upper }}</h3>
                     <p class="mt-4 mt-md-0 text-justify">{{ actualite.content }}</p>
@@ -62,7 +62,7 @@
                 {% for comment in comments %}
 
                     <div class="d-flex flex-nowrap align-items-center comm m-3">
-                        <img src="{{ asset('img/'~comment.user.profilePicture) }}" alt="" class="comment-avatar rounded-circle">
+                        <img src="{{ asset('img/profilePictures/'~comment.user.profilePicture) }}" alt="" class="comment-avatar rounded-circle">
                         <div class="col-12 pl-3">
                             <div class="col-12 px-0">
                                 <p class="mb-1 font-weight-bold">{{ comment.user.username|capitalize }}</p>
