--- a/app/Resources/views/main/oiseaux.html.twig
+++ b/app/Resources/views/main/oiseaux.html.twig
@@ -137,7 +137,7 @@
                                 </div>
                                 <div class="modal-body py-0 mb-5">
                                     <div class="flex-wrap media align-items-center justify-content-center px-0 px-md-3">
-                                        <img class="col-12 col-md-4 rounded mr-md-4 p-0" src="{{asset('img/birds')~ bird.image }}" alt="image {{ bird.name }}">
+                                        <img class="col-12 col-md-4 rounded mr-md-4 p-0" src="{{asset('img/birds/')~ bird.image }}" alt="image {{ bird.name }}">
                                         <div class="media-body col-12 col-md-8 p-0">
                                             <h3 class="mt-5 mt-md-0 text-center text-md-left">DESCRIPTION</h3>
                                             <p class="text-justify">{{ bird.description }}</p>
