--- a/app/Resources/views/main/profile.html.twig
+++ b/app/Resources/views/main/profile.html.twig
@@ -74,7 +74,7 @@
                 	{# Informations utilisateur #}
                     <div class="col-12 col-md-6">
                         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-start">
-                            <img src="{{ asset('img/profilePictures'~ user.profilePicture) }}" alt="photo de profil"
+                            <img src="{{ asset('img/profilePictures/'~ user.profilePicture) }}" alt="photo de profil"
                                  class="rounded-circle" id="profileImg">
                             <div class="text-left mt-0 ml-3 mt-md-3">
                                 <h3 class="mb-2 mb-md-3">{{ user.username|capitalize }}</h3>
@@ -201,7 +201,7 @@
                 	    {# FORMULAIRE DE CHANGEMENT D'AVATAR #}
                 	    <div class="col-12 col-md-6 mb-5">
                 	        <div class="d-flex flex-column align-items-center">
-                	            <img src="{{ asset('img/profilePictures'~ user.profilePicture) }}" alt="photo de profil" class="rounded-circle" id="profileImg">
+                	            <img src="{{ asset('img/profilePictures/'~ user.profilePicture) }}" alt="photo de profil" class="rounded-circle" id="profileImg">
                 	            <div class="text-center mt-3">
                 	                <span>Changer la photo de profil</span>
                 	            </div>
@@ -314,7 +314,7 @@
     	                        <div class="p-2 nao-card mx-auto">
     	                        	<div class="d-flex flex-nowrap">
     	                                <div class="bird-img-wrapper">
-    	                                    <img src="img/observations/{{ waitingObservation.image }}"
+    	                                    <img src="{{ asset('img/observations/'~waitingObservation.image) }}"
     	                                         alt="prise par {{ waitingObservation.user.username }}"
     	                                         class="bird-img">
     	                                </div>
@@ -360,11 +360,7 @@
 
                                     <div class="modal-body py-0 mb-5">
                                         <div class="flex-wrap media align-items-center justify-content-center px-0 px-md-3">
-                                            {% if waitingObservation.bird.image %}
-                                                <img class="col-12 col-md-4 rounded mr-md-4 p-0" src="{{asset('img/observations/'~waitingObservation.bird.image)  }}" alt="image {{ waitingObservation.bird.name }}">
-                                            {% else %}
-                                                <img class="col-12 col-md-4 rounded mr-md-4 p-0" src="{{asset('img/observations/anonymeBird.png')  }}" alt="image {{ waitingObservation.bird.name }}">
-                                            {% endif %}
+                                                <img class="col-12 col-md-4 rounded mr-md-4 p-0" src="{{asset('img/birds/'~waitingObservation.bird.image)  }}" alt="image {{ waitingObservation.bird.name }}">
 
                                             <div class="media-body col-12 col-md-8 p-0">
                                                 <h3 class="mt-5 mt-md-0 text-center text-md-left">DESCRIPTION</h3>
@@ -438,7 +434,7 @@
                                                     <div class="flex-wrap flex-column comm-display p-0 mb-4" id="Js-observationCommentsDisplay{{ waitingObservation.id }}">
                                                         {% for comment in waitingObservation.comments %}
                                                             <div class="d-flex flex-nowrap align-items-center comm m-3">
-                                                                <img src="{{ asset('img/profilePictures'~comment.user.profilePicture) }}" alt="" class="comment-avatar rounded-circle">
+                                                                <img src="{{ asset('img/profilePictures/'~comment.user.profilePicture) }}" alt="" class="comment-avatar rounded-circle">
                                                                 <div class="col-12 pl-3 text-left">
                                                                     <div class="col-12 px-0">
                                                                         <p class="mb-1 font-weight-bold">{{ comment.user.username|capitalize }}</p>
