--- a/web/css/observation.css
+++ b/web/css/observation.css
@@ -13,7 +13,16 @@
         height: 408px;
     }
 }
-.upload-image {
-	min-height: 130px;
+input#appbundle_observation_imageFile_file {
+    display: inline-block;
+    width: 100%;
+    padding: 120px 0 0 0;
+	min-height: 100px;
+    overflow: hidden;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url('../img/elements/addBirdImage.png') center center no-repeat;
+    border-radius: 25px;
 }
 
