--- a/app/Resources/views/main/actualite.html.twig
+++ b/app/Resources/views/main/actualite.html.twig
@@ -95,12 +95,12 @@
         </div>
     </section>
 
-    {#<div class="container">
+    <div class="container">
         <div class="d-flex flex-wrap justify-content-around justify-content-sm-between align-items-center mt-5">
             <a href="{{ path('observation') }}" class="text-center btn btn-outline my-3 my-sm-0">précédent</a>
             <a href="{{ path('observation') }}" class="text-center btn btn-outline my-3 my-sm-0">suivant</a>
         </div>
-    </div>#}
+    </div>
 
 
     </div>
