--- a/app/Resources/views/main/profile.html.twig
+++ b/app/Resources/views/main/profile.html.twig
@@ -571,10 +571,13 @@
                     <div class="d-flex flex-column">
                         <div class="modal-title heading justify-content-center mb-3">
                             <h2>Félécitation</h2>
+                            <div class="text-center mx-auto">
+                                <i class="fa fa-smile-o fa-5x mb-3"></i>
+                            </div>
                             <p>L'observation à bien été supprimée</p>
                         </div>
                         <div class="text-center mx-auto">
-                            <i class="fa fa-smile fa-5x mb-3"></i>
+                            <i class="fa fa-smile-o fa-5x mb-3"></i>
                         </div>
                     </div>
                 </div>
@@ -595,10 +598,10 @@
                         <div class="modal-title heading justify-content-center mb-3">
                             <h2>Félécitation</h2>
                             <p>L'observation à bien été validée !</p>
-                            <p>Bonne continuation sur notre site !</p>
-                        </div>
                         <div class="text-center mx-auto">
-                            <i class="fa fa-smile fa-5x mb-3"></i>
+                            <i class="fa fa-smile-o fa-5x mb-3"></i>
+                        </div>
+                            <p>Bonne continuation sur notre site !</p>
                         </div>
                     </div>
                 </div>
