CSS: Fix image upload form

--- a/web/css/base.css
+++ b/web/css/base.css
@@ -28,7 +28,7 @@
 
 /* DECLARATION DES POLICES */
 
-@import url('https://fonts.googleapis.com/css?family=Raleway|Roboto');
+@import url('https://fonts.googleapis.com/css?family=Raleway:200,300,400,500|Roboto');
 
 /* latin-ext */
 
