--- a/app/Resources/views/main/profile.html.twig
+++ b/app/Resources/views/main/profile.html.twig
@@ -222,7 +222,7 @@
                         </div>
                         {# FORMULAIRE DE CHANGEMENT DE PSEUDO #}
                         <div class="col-12 col-md-6">
-                            <h4 class="text-center mb-4">Modifier votre pseudo</h4>
+                            <h4 class="text-center mb-4">Modifier votre profil</h4>
                             <div class="row">
                                 <div class="col">
                                     {{ form_start(formChange) }}
@@ -243,7 +243,7 @@
                     <div class="row mt-5">
 
                         {# FORMULAIRE DE CHANGEMENT DE MOT DE PASSE #}
-                         <div class="col-12 col-md-6">
+                         <div class="col-12 col-md-6 ml-md-auto">
                             <h4 class="text-center mb-4">Modifier votre mot de passe</h4>
                             <div class="col">
                                 {{ form_start(formChangePassword) }}
