--- a/app/Resources/views/main/admin.html.twig
+++ b/app/Resources/views/main/admin.html.twig
@@ -55,7 +55,7 @@
 
                         <div class="flex-wrap flex-column users-display flex-nowrap p-0" id="userDisplay">
                             {% for user in users %}
-                                <div class="row mb-2" id="user_{{ user.id }}">
+                                <div class="row mb-2 oneUser correspond" id="user_{{ user.id }}" data-userId="{{ user.id }}" data-username="{{ user.username }}">
                                     <div class="col-3 col-sm-4 col-lg-2 ml-2">
                                         <img src="{{ asset('img/profilePictures/'~user.profilePicture) }}" alt=""
                                              class="imgUser rounded-circle">
@@ -80,7 +80,6 @@
                                     <div class="media-body col-6 col-sm-8 col-lg-6 ml-3">
                                         <p class="text-justify">{{ user.email|capitalize }}</p>
                                         <div>
-                                            <a href="#">
                                                 <i class="fa fa-star-half-o fa-2x"
                                                    aria-hidden="true"
                                                    data-userId="{{ user.id }}"
@@ -90,8 +89,8 @@
                                                             {% endif %}
                                                         {% endfor %} >
                                                 </i>
-                                            </a>
-                                            <a href="#">
+
+
                                                 <i class="fa fa-star fa-2x"
                                                    aria-hidden="true"
                                                         {% for role in user.roles %}
@@ -101,11 +100,10 @@
                                                         {% endfor %} >
 
                                                 </i>
-                                            </a>
+
                                             <a href="#"><i class="fa fa-trash fa-2x delete-user"
                                                            id="delete_user_{{ user.id }}" data-toggle="modal"
                                                            data-target="#deleteUserModal" aria-hidden="true"
-                                                           data-url="{{ path('delete_user', { 'id': user.id } ) }}"
                                                            data-userid="{{ user.id }}"></i></a>
 
                                             {#-----MODAL DELETE USER-----#}
@@ -120,16 +118,16 @@
                                                     <div class="modal-content col-10 col-md-8 col-lg-6 py-4 mx-auto">
                                                         <div class="d-flex flex-column">
                                                             <div class="modal-title heading row justify-content-center mb-3">
-                                                                <h2>Je suis un titre</h2>
-                                                                <p>Vous êtes sur le point de supprimer définitivement {{ user.username }}</p>
+                                                                <h2>Attention</h2>
                                                             </div>
                                                             <div class="text-center mx-auto">
+                                                                <p>Vous êtes sur le point de supprimer définitivement {{ user.username }}</p>
                                                                 <i class="fa fa-user-times fa-5x mb-3"></i>
                                                                 <p>Cette action est irréversible !</p>
                                                             </div>
                                                             <div class="d-flex flex-column flex-sm-row justify-content-around mx-auto">
                                                                 <button class="btn btn-outline" data-dismiss="modal">Annuler</button>
-                                                                <button class="btn btn-primary ml-0 ml-sm-3 mt-3 mt-sm-0" type="submit" data-dismiss="modal" id="confirmDeleteUserBtn" data-userid="{{ user.id }}" >Confirmer</button>
+                                                                <button class="btn btn-primary ml-0 ml-sm-3 mt-3 mt-sm-0 confirmDeleteUser-JS" type="submit" data-dismiss="modal" data-userid="{{ user.id }}" >Confirmer</button>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -180,7 +178,9 @@
                                                    aria-hidden="true"
                                                    id="delete_actualite_{{ actualite.id }}"
                                                    data-actualiteId="{{ actualite.id }}"
-                                                   data-url="{{ path('delete_actualite', {'id' :  actualite.id} ) }}">
+                                                   data-url="{{ path('delete_actualite', {'id' :  actualite.id} ) }}"
+                                                   data-toggle="modal"
+                                                   data-target="#deleteActualiteModal">
                                                 </i>
                                             </a>
 
@@ -188,6 +188,34 @@
                                         </div>
                                     </div>
                                 </div>
+                                {#-----MODAL DELETE ACTUALITE-----#}
+                                <div class="modal modal-alert pt-5" id="deleteActualiteModal">
+                                    <div class="close-wrap d-flex mx-auto align-items-center justify-content-center">
+                                        <button type="button" class="close-button text-center mb-1" data-dismiss="modal">
+                                            &times;
+                                        </button>
+                                    </div>
+                                    <div class="modal-dialog">
+
+                                        <div class="modal-content col-10 col-md-8 col-lg-6 py-4 mx-auto">
+                                            <div class="d-flex flex-column">
+                                                <div class="modal-title heading row justify-content-center mb-3">
+                                                    <h2>Attention</h2>
+                                                </div>
+                                                <div class="text-center mx-auto">
+                                                    <p>Vous êtes sur le point de supprimer définitivement l'actualite "{{ actualite.title }}"</p>
+                                                    <i class="fa fa-remove fa-5x mb-3"></i>
+                                                    <p>Cette action est irréversible !</p>
+                                                </div>
+                                                <div class="d-flex flex-column flex-sm-row justify-content-around mx-auto">
+                                                    <button class="btn btn-outline" data-dismiss="modal">Annuler</button>
+                                                    <button class="btn btn-primary ml-0 ml-sm-3 mt-3 mt-sm-0 confirmDeleteActualite-JS" type="submit" data-dismiss="modal" data-actualiteid="{{ actualite.id }}" >Confirmer</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                {#-----END MODAL DELETE ACTUALITE-----#}
                             {% endfor %}
                         </div>
 
@@ -213,12 +241,59 @@
         </div>
 
     </section>
+    {#-----MODAL D'ERREUR -----#}
+    <div class="modal modal-alert pt-5 px-1" id="modal-error">
+        <div class="close-wrap d-flex mx-auto align-items-center justify-content-center">
+            <button type="button" class="close-button text-center mb-1" data-dismiss="modal">
+                &times;
+            </button>
+        </div>
+        <div class="modal-dialog">
+            <div class="modal-content col-12 col-sm-10 col-md-8 col-xl-5 py-4 mx-auto">
+                <div class="d-flex flex-column">
+                    <div class="modal-title heading justify-content-center mb-3">
+                        <h2>Une erreur est survenue</h2>
+                        <p>Si cette erreur persiste, veuillez contacter l'administration du site</p>
+                        <a href="{{ path('contact') }}">Envoyer un message</a>
+
+                    </div>
+                    <div class="text-center mx-auto">
+                        <i class="fa fa-exclamation-circle fa-5x mb-3"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    {#-----FIN MODAL ERREUR-----#}
+
+    {#-----MODAL DE SUCCESS DELETE-----#}
+    <div class="modal modal-alert pt-5 px-1" id="modal-success-delete">
+        <div class="close-wrap d-flex mx-auto align-items-center justify-content-center">
+            <button type="button" class="close-button text-center mb-1" data-dismiss="modal">
+                &times;
+            </button>
+        </div>
+        <div class="modal-dialog">
+            <div class="modal-content col-12 col-sm-10 col-md-8 col-xl-5 py-4 mx-auto">
+                <div class="d-flex flex-column">
+                    <div class="modal-title heading justify-content-center mb-3">
+                        <h2>Félicitations</h2>
+                        <div class="text-center mx-auto">
+                            <i class="fa fa-smile-o fa-5x mb-3"></i>
+                        </div>
+                        <p>La suppression à bien été effectuée</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    {#-----FIN MODAL SUCCESS DELETE-----#}
 
 {% endblock %}
 
 {% block javascripts %}
     {{ parent() }}
     {#<script src="{{ asset('js/admin.js') }}"></script>#}
-    <script src="{{ asset('js/adminSearchUsers.js') }}"></script>
+    <script src="{{ asset('js/admin.js') }}"></script>
 {% endblock %}
 
