COnnection via oauth

--- a/app/Resources/views/mail/registerConfirmation.html.twig
+++ b/app/Resources/views/mail/registerConfirmation.html.twig
@@ -1,8 +1,11 @@
 <h2>
     Bonjour,
-
-    Veuillez cliquer sur ce lien pour activer votre compte NOA :
-
-    http://localhost/OCP5_CatBot/web/app_dev.php/activate?token={{ token }}
-
 </h2>
+<p>
+    Veuillez cliquer <a href="http://ocp5catbot.chugu.fr/activate?token={{ token }}">ICI</a> pour activer votre compte NAO ;)
+</p>
+<hr>
+<p>
+    L'équipe NAO
+</p>
+
